--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,30 @@
 @layer base {
   :root {
    --radius:0.5rem;
+   --background: 0 0% 100%; 
+    --foreground: 222.2 84% 4.9%; 
+    --popover: 0 0% 100%; 
+    --popover-foreground: 222.2 84% 4.9%; 
+    --border: 214.3 31.8% 91.4%;
+
+    --toast-background: var(--background);
+    --toast-foreground: var(--foreground);
+    --toast-border: var(--border);
+  
+  }
+
+  .dark {
+    --background: 222.2 84% 4.9%; 
+    --foreground: 210 40% 98%;
+    --popover: 217.2 32.6% 17.5%; 
+    --popover-foreground: 210 40% 98%; 
+    --border: 217.2 32.6% 17.5%;
+   
+
+   
+    --toast-background: var(--background);
+    --toast-foreground: var(--foreground);
+    --toast-border: var(--border);
   }
   
 }
